# VlogUS

./: ProcessData.py  README.md  app.py  data.txt  face_tracking.py  rtsp.py  stepper.py  test.py
CAD/: CAM - BRASDROIT.step  CAM - BRASGAUCHE.step  CAM - BackPlate.step  CAM - CREMAILLERE.step  CAM - CellGear1.step  CAM - CellGear2.step  CAM - CellMount.step  CAM - FrontPlate.step  ELEC - Boite_Elec.step  FRM - Base.step  FRM - Biceps.step  FRM - Support moteur.step  Stand.step  TCP.step
OpenRB/: .gitignore  platformio.ini
OpenRB/boards/: OpenRB-150.json
OpenRB/lib/delta/: delta.cpp  delta.h
OpenRB/src/: main.cpp
cinematiqueInverse/: CMakeLists.txt  cinematiqueInverse.hpp  main  main.cpp
face_tracking/: CMakeLists.txt  LICENSE  ProcessData.py  README.md  app.py  cert.pem  data.txt  key.pem  rtsp.py  start.sh  test.py  vlogus.py
face_tracking/src/: face_tracking.cpp
face_tracking/templates/: index.html
templates/: index.html
